# Vanilla-Conquer

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  m68k-amigaos.cmake
.github/workflows/: codeql-analysis.yml  linux.yml  macos.yml  macos_universal.yml  mingw.yml  windows.yml
TIBERIANDAWN/: MIXFILE.H
arm7/: CMakeLists.txt  audio.cpp  main.cpp  printf.cpp  printf.h
cmake/: BuildIcons.cmake  CMakeASM_JWASMInformation.cmake  CMakeDetermineASM_JWASMCompiler.cmake  CMakeTestASM_JWASMCompiler.cmake  CPackConfig.cmake  CTestCustom.cmake  ClangFormat.cmake  FindClangFormat.cmake  FindOpenAL.cmake  FindSDL1.cmake  GitWatcher.cmake  ProductVersion.cmake  VersionResource.rc  VitaPackage.cmake  devkitarm-nds-toolchain.cmake  mingw-toolchain.cmake  template.xml  x86_64-mingw-w64-toolchain.cmake
common/: CMakeLists.txt  _diptabl.cpp  alloc.cpp  audio.h  audio_fifocommon.h  auduncmp.c  auduncmp.cpp  auduncmp.h  b64pipe.cpp  b64pipe.h  b64straw.cpp  b64straw.h  base64.cpp  bfiofile.cpp  bfiofile.h  bitblit.c  bitblit.h  bitfields.h  blowfish.cpp  blowfish.h  blowpipe.cpp  blowpipe.h  blwstraw.cpp  blwstraw.h  buff.cpp  buff.h  buffer.cpp  buffer.h  buffglbl.cpp  ccfile.cpp  ccfile.h  cdfile.cpp  cdfile.h  cliprect.c  cliprect.cpp  cliprect.h  combuf.cpp  combuf.h  compat.cpp  compat.h  (+295 more)
compat/: CMakeLists.txt  string.c  string.h.in
compat/dirent/: dirent.c  dirent.h
compat/fnmatch/: fnmatch.c  fnmatch.h
compat/getopt/: getopt.c  getopt.h
compat/libgen/: libgen.c
compat/strings/: strings.c  strings.h
redalert/: 2keyfram.cpp  CMakeLists.txt  _wsproto.cpp  _wsproto.h  aadata.cpp  abstract.cpp  abstract.h  adata.cpp  adpcm.cpp  aircraft.cpp  aircraft.h  anim.cpp  anim.h  audio.cpp  audio.h  bar.cpp  bar.h  base.cpp  base.h  base64.cpp  base64.h  bbdata.cpp  bdata.cpp  bench.cpp  bench.h  bfiofile.cpp  bfiofile.h  bigcheck.cpp  bigcheck.h  blowpipe.cpp  bmp8.cpp  bmp8.h  buff.h  bufferx.h  building.cpp  building.h  bullet.cpp  bullet.h  cargo.cpp  cargo.h  (+453 more)
redalert/resource/: resource.h
redalert/win32lib/: _diptabl.cpp  alloc.cpp  audio.h  buffer.h  ddraw.cpp  ddraw.h  defines.h  delay.cpp  dipthong.h  dplay.h  drawbuff.h  drawmisc.cpp  drawrect.cpp  dsound.h  externs.h  filepcx.h  filetemp.h  font.cpp  font.h  function.h  gbuffer.cpp  gbuffer.h  iconcach.h  iconset.cpp  irandom.cpp  keyboard.h  load.cpp  loadfont.cpp  misc.h  mono.h  mouse.h  mouseww.cpp  palette.cpp  palette.h  playcd.h  profile.h  rawfile.h  set_font.cpp  shape.h  sos.h  (+15 more)
resources/: CMakeUserPresets.json.example  vanillara.desktop  vanillatd.desktop
resources/remaster_mods/Vanilla_RA/: ccmod.json
resources/remaster_mods/Vanilla_TD/: GameConstants_Mod.xml  ccmod.json
solesurvivor/: CMakeLists.txt  abstract.cpp  abstract.h  adata.cpp  aircraft.cpp  aircraft.h  anim.cpp  audio.cpp  base.h  bbdata.cpp  building.cpp  building.h  bullet.cpp  cargo.cpp  cdata.cpp  colrlist.cpp  colrlist.h  combat.cpp  compat.h  confdlg.cpp  connect.cpp  connect.h  conquer.cpp  conquer.h  const.cpp  coord.cpp  credits.cpp  credits.h  debug.cpp  defines.h  display.cpp  display.h  dllinterface.cpp  dllinterface.h  dllinterfaceeditor.cpp  dllinterfaceversion.h  door.cpp  drive.h  drop.cpp  ending.cpp  (+124 more)
tests/: CMakeLists.txt  drawbuff.cpp  drawline.cpp  drawline.inc  face.cpp  faderesult.inc  faderesult.raw  faderesult2.inc  fading.cpp  fatpixel.cpp  fatpixeldata.inc  filltest.inc  frombufftest.inc  irandom.cpp  lcw.cpp  miscasm.cpp  putpixel.cpp  putpixel.inc  rect.cpp  structsizera.cpp  structsizetd.cpp  testimage.inc  testpal.inc  tobuff.cpp  xordelta.cpp
tiberiandawn/: CMakeLists.txt  aadata.cpp  abstract.cpp  abstract.h  adata.cpp  aircraft.cpp  aircraft.h  alloc.cpp  anim.cpp  anim.h  audio.cpp  audio.h  base.cpp  base.h  bbdata.cpp  bdata.cpp  building.cpp  building.h  bullet.cpp  bullet.h  cargo.h  ccdde.cpp  ccfile.cpp  ccfile.h  ccini.cpp  ccini.h  cdata.cpp  cdfile.cpp  cdfile.h  cell.cpp  cell.h  checkbox.cpp  checkbox.h  cheklist.cpp  cheklist.h  combat.cpp  combuf.cpp  combuf.h  compat.h  comqueue.cpp  (+260 more)
tiberiandawn/resource/: resource.h
tiberiandawn/win32lib/: _diptabl.cpp  _file.h  audio.h  buffer.cpp  buffglbl.cpp  ddraw.cpp  descmgmt.h  dipthong.cpp  drawmisc.cpp  dsetup.h  file.h  filetemp.h  font.cpp  font.h  gbuffer.h  getshape.cpp  iconset.cpp  iff.h  keyboard.cpp  keyboard.h  loadpal.cpp  mem.cpp  memflag.h  misc.h  mono.h  morphpal.cpp  mouse.h  mouseww.cpp  palette.cpp  palette.h  profile.h  rawfile.h  regionsz.cpp  shape.h  soundint.h  structs.h  tile.h  timer.cpp  timerdwn.cpp  timerini.cpp  (+9 more)
tools/: CMakeLists.txt
tools/miniposix/: CMakeLists.txt
tools/miniposix/dirent/: dirent.c  dirent.h
tools/miniposix/getopt/: getopt.c  getopt.h
tools/miniposix/libgen/: libgen.h
tools/miniposix/strings/: strings.h
tools/miniposix/unistd/: unistd.h
tools/mixtool/: CMakeLists.txt  crc32.cpp  crc32.h  fastini.cpp  fastini.h  makemix.cpp  mixcreate.h  mixnamedb.cpp  mixnamedb.h  mixnamedb_data.cpp
tools/stringtool/: CMakeLists.txt  ini2str.cpp  ini2str.h  strgen.cpp  strini.cpp  strini.h
